--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "ag-charts-community": "^9.0.1",
+    "ag-charts-react": "^9.0.1",
     "antd": "^5.12.2",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-icons": "^4.12.0",
     "react-router": "^6.21.0",
     "react-router-dom": "^6.21.0"
@@ -27,6 +32,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "less": "^4.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
