Added reports file

--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "less": "^4.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
